public/codillon.css
@font-face {
   font-family: 'MLMRoman12-Regular';
   src: url('/fonts/mlmr12.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
}

@font-face {
   font-family: 'MLMSansDemiCond10-Regular';
   src: url('/fonts/mlmssdc10.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
}

body {
    font-family: 'MLMRoman12-Regular';
    font-size: 24pt;
    background-color: #fffff0;
}

div.textentry {
    position: relative;
    top: 0;
    right: 0; 
    bottom: 0;
    left: 0;
    user-select: none;
    margin-left: 20pt;
    white-space: pre;
    counter-reset: codelines;
    display: grid;
    grid-auto-rows: var(--codillon-line-spacing);
}

div.textentry:focus {
    outline: none;
    box-shadow: none;
}

.line {
    color: gray;
}

.meta-line {
    color: indigo;
}

.instr-line {
    color: black;
    counter-increment: codelines;
}

.invalid-line {
    counter-increment: codelines;
}

.line::before {
    font-size: 20pt;
    color: darkred;
    display: inline-block;
    width: 50px;
    text-align: right;
    content: " ";
}

.malformed-line::before {
    content: "\1d11e        ";
}

.invalid-line::before {
    content: "\2717        ";
}

.numbered-line::before {
    color: gray;
    content: counter(codelines) "        ";
}

.line:has(span.instr[data-synthetic-before])::before {
    color: darkred;
    content: "\1d160        ";
}

.animated .instr {
    transition: 0.2s;
}

span.comment {
    color: darkblue;
    font-family: 'MLMSansDemiCond10-Regular';
    font-size: 18pt;
    margin-left: 1px;
}

span.instr[data-synthetic-before]::before {
    border: 1px dashed darkred;
    color: darkred;
    position: absolute;
    left: 30px;
    padding: 3px;
    font-family: 'MLMSansDemiCond10-Regular';
    font-size: 12pt;
    transform: translateY(10px);
    content: attr(data-synthetic-before);
}

span.instr[data-debug]::before {
    font-family: 'MLMSansDemiCond10-Regular';
    font-size: 10pt;
    content: attr(data-debug);
    color: white;
    background-color: darkred;

    border-radius: 10px;
    padding: 4px;
    margin-right: 10px;
}

span.comment[data-commentary]::after {
    font-family: 'MLMRoman10-Regular';
    font-size: 12pt;
    color: darkred;
    float: right;
    border: 1px solid darkred;
    padding: 4px;
    margin-top: 10px;

    content: attr(data-commentary);
}

span.debug[data-debug]::after {
    font-family: 'MLMSansDemiCond10-Regular';
    font-size: 10pt;
    margin-left: 10px;
    content: attr(data-debug);
    color: white;
    background-color: darkblue;

    border-radius: 10px;
    padding: 4px;
}

.shake-a {
    animation: shake-a 0.25s;
}

.shake-b {
    animation: shake-b 0.25s;
}

@keyframes shake-a {
 0% { transform: translateX(0) }
 25% { transform: translateX(5px) }
 50% { transform: translateX(-5px) }
 75% { transform: translateX(5px) }
 100% { transform: translateX(0) }
}

@keyframes shake-b {
 0% { transform: translateX(0) }
 25% { transform: translateX(5px) }
 50% { transform: translateX(-5px) }
 75% { transform: translateX(5px) }
 100% { transform: translateX(0) }
}

.reveal-a {
    animation: reveal-a 0.25s;
}

.reveal-b {
    animation: reveal-b 0.25s;
}

@keyframes reveal-a {
    0% { transform: scaleY(0%) }
    100% { transform: scaleY(100%) }
}

@keyframes reveal-b {
    0% { transform: scaleY(0%) }
    100% { transform: scaleY(100%) }
}

.flyend-a .instr::before {
    display: inline-block;
    content: "end";
    animation: flyend-a 0.25s;
    transform: translateY(20px) scaleY(0%);
    width: 0px;
}

.flyend-b .instr::before {
    display: inline-block;
    content: "end";
    animation: flyend-b 0.25s;
    transform: translateY(20px) scaleY(0%);
    width: 0px;
}

@keyframes flyend-a {
    0% { transform: translateY(var(--codillon-line-spacing)) scaleY(100%) }
    100% { transform: translateY(calc(0.5 * var(--codillon-line-spacing))) scaleY(0%) }
}

@keyframes flyend-b {
    0% { transform: translateY(var(--codillon-line-spacing)) scaleY(100%) }
    100% { transform: translateY(calc(0.5 * var(--codillon-line-spacing))) scaleY(0%) }
}

.annotations {
    position: absolute;
}

.animated .annotation {
    transition: all 0.25s;
}

.annotation {
    transform-origin: top;
    transform-box: fill-box;
    transform: scaleY(0) translateX(0) translateY(0);
}

.graph-canvas {
    background-color: #fff;
    display: block; 
    border: 1px solid darkred;
    margin-left: auto;
    margin-right: auto;
}

.step-slider {
    width: 100%;
    margin: 0;
    accent-color: darkred;
    --slider-thumb-size: 20px;
    --slider-track-height: 10px;
    --slider-track-bg: linen;
    --slider-track-border: 1px solid burlywood;
    --slider-thumb-bg: darkred;
    --slider-thumb-border: 2px solid white;
}

.step-slider::-webkit-slider-runnable-track {
    height: var(--slider-track-height);
    border-radius: 10px;
    background: var(--slider-track-bg);
    border: var(--slider-track-border);
}

.step-slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: var(--slider-thumb-size);
    height: var(--slider-thumb-size);
    border-radius: 50%;
    background: var(--slider-thumb-bg);
    border: var(--slider-thumb-border);
    cursor: pointer;
    margin-top: calc((var(--slider-track-height) - var(--slider-thumb-size)) / 2);
    box-shadow: none;
}

#slider-ticks {
    display: flex;
    position: relative;
    height: 30px;
    margin: 0 0 0 10px;
}

#slider-ticks option {
    transform: translateX(-50%);
    display: flex;
    align-items: center;
    color: darkred;
    font-size: 12pt;
    padding: 0;
}

.slider-container {
    margin: 0 20px;
}

.slider-hidden {
    visibility: hidden;
}

